# dezou_web_project

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  poker_table.db  poker_table_openapi.yaml  poker_table_sqlite_schema.sql  pyproject.toml  requirements.txt  网页德州扑克对局系统.md
.test_artifacts/: pytest-1a9846da0e12479bbf043c52ece3175e.db  pytest-2147942663bc4c4582a3588378647348.db  pytest-505d8b7f44eb4a4c8aa875341dc0c1a1.db  pytest-b525bb944d7a4fd68234a522a26c6488.db  pytest-e224edc974254d058509a188e973a8d1.db  pytest-f7399bad1ae74516a17ce0ffca85a09c.db  test-21008194b48d4e2e8569612ea7db30cd.db  test-fc2897728ae842f1a8feee84835f9861.db
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  errors.py  utils.py
app/db/: database.py
app/domain/: schemas.py
app/engine/: table_kernel.py
app/repositories/: store.py
app/services/: poker_service.py  runtime_registry.py
app/static/: app.css  app.js
app/templates/: index.html
docs/: acceptance.md  api-notes.md  architecture.md  player-api.md
tests/: conftest.py  test_action_api.py  test_chat_and_events.py  test_frontend_config.py  test_health.py  test_player_api.py  test_resume_api.py  test_session_api.py  test_table_kernel.py
