[project]
name = "poker-table"
version = "0.1.0"
description = "Web Texas Hold'em table system built with FastAPI and pokerkit."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135.3",
  "jinja2>=3.1.4",
  "pokerkit>=0.7.3",
  "pydantic>=2.12.5",
  "sqlalchemy>=2.0.43",
  "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1",
  "pytest>=9.0.2",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-q -p no:cacheprovider"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".idea", ".test_artifacts"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
